# ME-433

hw11/: edges.py  rgb_plot.py
hw12/: CMakeLists.txt  RCservo.c  board.heic
hw14/FIR/: SigA_FIR.py  hw14_FIR.py  sigB_FIR.py  sigC_FIR.py  sigD_FIR.py
hw14/IIR/: hw14_IIR.py
hw14/MovingAverage/: hw14_movingAverage.py
hw14/Plot/: hw14_plot.py
hw15/: Connection.SLDPRT  Wheel2.SLDPRT
hw2/: CMakeLists.txt
hw2/adc/: CMakeLists.txt  adc.c
hw2/combined/: CMakeLists.txt  combined.c
hw2/gpio/: CMakeLists.txt  gpio.c
hw2/print/: CMakeLists.txt  print.c
hw3/: CMakeLists.txt  combined.c
hw4/: CMakeLists.txt  SPI.c
hw5/: CMakeLists.txt  HW5.heic  I2C.c
hw6/: CMakeLists.txt  I2COLED.c  hw6board.heic
hw7/: CMakeLists.txt  UARTOLED.c
hw7/Test/: uart_advanced.c
hw9/: CMakeLists.txt  PicoZero.c
